...
                            .verticalScroll(scrollState),
                ) {
                    SectionHeader(strings.clusterDetailsSection)
                    OutlinedTextField(
                        value = state.clusterName,
                        onValueChange = { state.clusterName = it },
                        label = { Text("Cluster Name") },
                        placeholder = { Text("e.g. production-cluster-01") },
                        modifier = Modifier.fillMaxWidth(),
                        singleLine = true,
                        shape = MaterialTheme.shapes.medium,
                        colors =
                            TextFieldDefaults.outlinedTextFieldColors(
...

                    Spacer(modifier = Modifier.height(32.dp))

                    SectionHeader(strings.cloudProviderTitle)
                    Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.spacedBy(16.dp)) {
                        ProviderTextCard(
                            providerName = "AWS",
                            isSelected = state.selectedProvider == CloudProvider.AWS,
                            modifier = Modifier.weight(1f),
                        ) {
                            state.selectedProvider = CloudProvider.AWS
                            val flavors = ClustEngineInstanceTypeLoader.loadClustEngineInstanceType("config/aws_instances.json")
                            state.availableFlavors = flavors
...
                    }

                    Spacer(modifier = Modifier.height(32.dp))
                    SectionHeader("Network Routing Mode")
                    Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.spacedBy(16.dp)) {
                        ProviderTextCard(
                            providerName = "Single IP",
                            isSelected = state.selectedRoutingMode == UIRoutingMode.SINGLE_IP,
                            modifier = Modifier.weight(1f),
                        ) {
                            state.selectedRoutingMode = UIRoutingMode.SINGLE_IP
                        }

...
